# AI-Design-Assistant

./: .env.example  .gitignore  README.md  chat_history.py  logger.py  main.py  model_manager.py  modules.py  openai_api.py  pyproject.toml  requirements.txt  settings.py  settings_dialog.py  testing.py  ui_layout.py
.github/workflows/: python-app.yml
.legacy/: plugin_manager.py  ui_layout.py
ai_design_assistant/: __main__.py
ai_design_assistant/api/: __init__.py  deepseek_backend.py  local_backend.py  local_qwen25_backend.py  openai_api.py  openai_backend.py
ai_design_assistant/core/: __init__.py  chat.py  image_utils.py  logger.py  models.py  plugins.py  settings.py  summarizers.py
ai_design_assistant/old_files/: chat_manager.py  plugin_manager.py  ui_layout.py
ai_design_assistant/plugins/: compress_plugin.py  convert_plugin.py  crop_plugin.py  enhance_plugin.py  remove_bg_plugin.py  resize_plugin.py  upscale_plugin.py
ai_design_assistant/resources/themes/: chat.qss  dark.qss  light.qss
ai_design_assistant/ui/: chat_view.py  gallery_panel.py  main_window.py  plugin_panel.py  settings_dialog.py  theme_utils.py  widgets.py  workers.py
plugins/: remove_bg_plugin.py
tests/: test_ui.py  tests.py
themes/: light.qss
