[build-system]
requires      = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name        = "ai-design-assistant"
version     = "0.1.0"
description = "Desktop AI assistant for designers (PyQt + LLM + image plugins)"
authors     = ["Claritty"]
license     = "MIT"
readme      = "README.md"

# Диапазон Python указываем здесь
[tool.poetry.dependencies]
python            = ">=3.10,<3.14"
python-dotenv     = "^1.0"
platformdirs      = "^4.3"
openai            = "^1.76"
httpx             = "^0.28"
coloredlogs       = "^15.0"
humanfriendly     = "^10.0"
typing-extensions = "^4.13"

# GUI
PyQt6            = "^6.7"
PyQt6-WebEngine  = "^6.7"

# Image / plugins
rembg            = "^2.0"
onnxruntime      = "^1.18"
opencv-python    = "^4.11"
pillow           = "^11.2"
numpy            = "^2.2"
scikit-image     = "^0.25"
scipy            = "^1.15"
tqdm             = "^4.67"

[tool.poetry.group.dev.dependencies]
pytest        = "^8.2"
pytest-qt     = "^4.4"
ruff          = "^0.4"
mypy          = "^1.10"
pyinstaller   = "^6.4"

[tool.poetry.scripts]
ada = "ai_design_assistant.__main__:main"

# ───── ресурсы ──────────────────────────────────────────
[[tool.poetry.include]]
path = "ai_design_assistant/resources/**/*"

[[tool.poetry.include]]
path = "ai_design_assistant/data/**/*"

# ─────----- (необязательно) другие tool-конфиги  -----────
[tool.ruff]
line-length = 100